--- a/HTML/Dashboard.html
+++ b/HTML/Dashboard.html
@@ -7,22 +7,23 @@
     <title>Dashboard | Baler Nina</title>
     <script src="https://kit.fontawesome.com/d8f0503c9b.js" crossorigin="anonymous"></script>
     <script src="../JS/script.js"></script>
+    <link rel="icon" href="../IMAGES/Asset 7 (2)@4x.png"><!--icon tab-->
     <link rel="stylesheet" href="../CSS/newstyle.css" />
 </head>
 
 <body>
     <div class="side-nav">
         <div class="side-banner">
-            <img src="../../../IMAGES/Asset 7 (2)@4x.png" />
-            <img src="../../../IMAGES/Asset 10@4x.png" />
+            <img src="../IMAGES/Asset 7 (2)@4x.png" />
+            <img src="../IMAGES/Asset 10@4x.png" />
         </div>
         <div class="side-nav-content">
             <div class="navigation">
-                <a class="active-nav" href="../../Dashboard.html">
+                <a class="active-nav" href="Dashboard.html">
                     <i class="fa-solid fa-chart-line"></i>
                     <p>Dashboard</p>
                 </a>
-                <a href="../Booking.html">
+                <a href="Transaction/Booking.html">
                     <i class="fa-solid fa-bars-progress"></i>
                     <p>Transaction</p>
                 </a>
