--- a/HTML/Transaction/Add Booking/1_RoomSelection.html
+++ b/HTML/Transaction/Add Booking/1_RoomSelection.html
@@ -7,6 +7,7 @@
     <title>Transaction | Baler Nina</title>
     <script src="https://kit.fontawesome.com/d8f0503c9b.js" crossorigin="anonymous"></script>
     <script src="../../../JS/script.js"></script>
+    <link rel="icon" href="../../../IMAGES/Asset 7 (2)@4x.png"><!--icon tab-->
     <link rel="stylesheet" href="../../../CSS/newstyle.css" />
 </head>
 
@@ -16,39 +17,45 @@
             <img src="../../../IMAGES/Asset 7 (2)@4x.png" />
             <img src="../../../IMAGES/Asset 10@4x.png" />
         </div>
-        <div class="navigation">
-            <a href="#">
-                <i class="fa-solid fa-chart-line"></i>
-                <p>Dashboard</p>
-            </a>
-            <a class="active-nav" href="#">
-                <i class="fa-solid fa-bars-progress"></i>
-                <p>Transaction</p>
-            </a>
-            <a href="#">
-                <i class="fa-solid fa-user"></i>
-                <p>Accounts</p>
-            </a>
-            <a href="#">
-                <i class="fa-brands fa-buffer"></i>
-                <p>Offers</p>
-            </a>
-            <a href="#">
-                <i class="fa-solid fa-door-open"></i>
-                <p>Rooms</p>
-            </a>
-            <a href="#">
-                <i class="fa-solid fa-window-restore"></i>
-                <p>Content Control</p>
-            </a>
-            <a href="#">
-                <i class="fa-solid fa-file-lines"></i>
-                <p>Reports</p>
-            </a>
-            <a href="#">
-                <i class="fa-brands fa-font-awesome"></i>
-                <p>Logs</p>
-            </a>
+
+        <div class="side-nav-content">
+            <div class="navigation">
+                <a href="../../Dashboard.html">
+                    <i class="fa-solid fa-chart-line"></i>
+                    <p>Dashboard</p>
+                </a>
+                <a class="active-nav" href="../Booking.html">
+                    <i class="fa-solid fa-bars-progress"></i>
+                    <p>Transaction</p>
+                </a>
+                <a href="#">
+                    <i class="fa-solid fa-user"></i>
+                    <p>Accounts</p>
+                </a>
+                <a href="#">
+                    <i class="fa-brands fa-buffer"></i>
+                    <p>Offers</p>
+                </a>
+                <a href="#">
+                    <i class="fa-solid fa-door-open"></i>
+                    <p>Rooms</p>
+                </a>
+                <a href="#">
+                    <i class="fa-solid fa-window-restore"></i>
+                    <p>Content Control</p>
+                </a>
+                <a href="#">
+                    <i class="fa-solid fa-file-lines"></i>
+                    <p>Reports</p>
+                </a>
+                <a href="#">
+                    <i class="fa-brands fa-font-awesome"></i>
+                    <p>Logs</p>
+                </a>
+            </div>
+            <button type="button" class="navsize-button">
+                <i class="fa-solid fa-arrow-left"></i>
+            </button>
         </div>
     </div>
     <div class="container">
@@ -115,7 +122,7 @@
                                 <button type="button" class="button-close">
                                     <i class="fa-solid fa-xmark"></i>
                                 </button>
-                                <div class="room-description">                                    
+                                <div class="room-description">
                                     <div class="image-container">
                                         <img class="main-image" src="../../../IMAGES/prec.jpg">
                                     </div>
@@ -222,7 +229,7 @@
                                 <button type="button" class="button-close">
                                     <i class="fa-solid fa-xmark"></i>
                                 </button>
-                                <div class="room-description">                                    
+                                <div class="room-description">
                                     <div class="image-container">
                                         <img class="main-image" src="../../../IMAGES/shayne.jpeg">
                                     </div>
@@ -329,7 +336,7 @@
                                 <button type="button" class="button-close">
                                     <i class="fa-solid fa-xmark"></i>
                                 </button>
-                                <div class="room-description">                                    
+                                <div class="room-description">
                                     <div class="image-container">
                                         <img class="main-image" src="../../../IMAGES/hao.jpg">
                                     </div>
@@ -436,7 +443,7 @@
                                 <button type="button" class="button-close">
                                     <i class="fa-solid fa-xmark"></i>
                                 </button>
-                                <div class="room-description">                                    
+                                <div class="room-description">
                                     <div class="image-container">
                                         <img class="main-image" src="../../../IMAGES/nab.jpg">
                                     </div>
@@ -543,7 +550,7 @@
                                 <button type="button" class="button-close">
                                     <i class="fa-solid fa-xmark"></i>
                                 </button>
-                                <div class="room-description">                                    
+                                <div class="room-description">
                                     <div class="image-container">
                                         <img class="main-image" src="../../../IMAGES/jeff.jpg">
                                     </div>
