--- a/HTML/Transaction/Booking.html
+++ b/HTML/Transaction/Booking.html
@@ -7,22 +7,24 @@
   <title>Transaction | Baler Nina</title>
   <script src="https://kit.fontawesome.com/d8f0503c9b.js" crossorigin="anonymous"></script>
   <script src="../../JS/script.js"></script>
+  <link rel="icon" href="../../IMAGES/Asset 7 (2)@4x.png"><!--icon tab-->
   <link rel="stylesheet" href="../../CSS/newstyle.css" />
 </head>
 
 <body>
   <div class="side-nav">
     <div class="side-banner">
-      <img src="../../../IMAGES/Asset 7 (2)@4x.png" />
-      <img src="../../../IMAGES/Asset 10@4x.png" />
+      <img src="../../IMAGES/Asset 7 (2)@4x.png" />
+      <img src="../../IMAGES/Asset 10@4x.png" />
     </div>
+    
     <div class="side-nav-content">
       <div class="navigation">
-        <a href="../../Dashboard.html">
+        <a href="../Dashboard.html">
           <i class="fa-solid fa-chart-line"></i>
           <p>Dashboard</p>
         </a>
-        <a class="active-nav" href="../Booking.html">
+        <a class="active-nav" href="Booking.html">
           <i class="fa-solid fa-bars-progress"></i>
           <p>Transaction</p>
         </a>
